Fixed #193 - Grades > Filter by Name now wraps properly.

--- a/scss/trema/incourse.scss
+++ b/scss/trema/incourse.scss
@@ -187,3 +187,12 @@ body:not(#page-course-view-weeks, #page-course-view-topics, #page-course-view-re
 body.pagelayout-course .section {
     padding: 0.5rem!important;
 }
+
+// For Gradebook report.
+.initials-selector .initialswidget,
+.pagination-sm .page-link {
+    padding: 0.25rem 0.5rem!important;
+}
+body.pagelayout-report #page #page-content {
+  max-width: fit-content!important;
+}
